  - Moved all (five) "tyre_compound_list" options to "Units and symbols"
    config dialog, and is now called "tyre_compound_symbol".

* Force Widget
  - Add "show_front_downforce" & "show_rear_downforce" options,
    which show front & rear downforce reading in Newtons.
  - Add "warning_color_liftforce" that shows color indicator
    when generating lift force.

* Timing Widget
  - Add "show_session_personal_best" option (disabled by default),
    which shows personal best lap time from current session.

* [New]Tyre carcass temperature Widget (by Sasker)
  - Show carcass temperature of each tyres
    based on Tyre temperature Widget design,
    which helps analyzing and managing tyre grip
    and wear relative to carcass temperature change.
  - Many customizable options.

* Misc
  - Updated user guide.
  - Updated contributors.md with new contributor (Sasker).

2.4.0 (2023-11-19)
-----------------------------
* General
  - [New]Add "Grid move" option under overlay menu and tray menu (by Bernat),
    which enables grid-snap effect while moving widget
    for easy alignment and repositioning.
    "Grid move size" option is accessible from compatibility config dialog.
  - Add "Reset data" submenu to "Overlay" menu from main window,
    which allows user to reset data from active session only.
    Currently includes deltabest, fuel delta, trackmap data.

* Linux support
  - "enable_bypass_window_manager" option is now enabled by default
    for new preset created on Linux (by Bernat).

* [New]Heading Widget
  - Show vehicle yaw angle, slip angle, & direction of travel lines on compass bearings
    that similar to flight instrument "heading indicator".
  - Show vehicle yaw angle, slip angle readings in degrees.
  - New "icon_compass.png" compass bearings background in "images" folder.
  - Many customizable options.

* [New]Navigation Widget
  - Show navigation map and orientation centered on player's vehicle.
  - Show optional vehicle standings on navigation map.