@@ -57,8 +57,8 @@ WIDGET_DEFAULT = {
     "brake_bias": {
         "enable": True,
         "update_interval": 20,
-        "position_x": 453,
-        "position_y": 465,
+        "position_x": 593,
+        "position_y": 292,
         "opacity": 0.9,
         "font_name": "Consolas",
         "font_size": 15,
@@ -356,8 +356,8 @@ WIDGET_DEFAULT = {
     "friction_circle": {
         "enable": True,
         "update_interval": 20,
-        "position_x": 779,
-        "position_y": 688,
+        "position_x": 1000,
+        "position_y": 266,
         "opacity": 0.9,
         "font_name": "Consolas",
         "font_size": 13,
@@ -803,8 +803,8 @@ WIDGET_DEFAULT = {
     "rake_angle": {
         "enable": True,
         "update_interval": 20,
-        "position_x": 453,
-        "position_y": 489,
+        "position_x": 593,
+        "position_y": 315,
         "opacity": 0.9,
         "font_name": "Consolas",
         "font_size": 15,
@@ -1191,6 +1191,27 @@ WIDGET_DEFAULT = {
         "column_index_fuel": 3,
         "column_index_tyre": 4,
         "column_index_wear": 5,
+    },
+    "suspension_position": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 145,
+        "position_y": 670,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "bar_padding_horizontal": 0.4,
+        "bar_padding_vertical": 0.3,
+        "bar_width": 50,
+        "bar_gap": 2,
+        "font_color": "#AAAAAA",
+        "positive_position_color": "#FFAA00",
+        "negative_position_color": "#FF2200",
+        "bkg_color": "#222222",
+        "position_max_range": 100,
     },
     "timing": {
         "enable": True,
