@@ -91,7 +91,7 @@ class Draw(Widget):
         if self.wcfg["enable"] and api.state:
 
             # Read ride height & rake data
-            ride_height = tuple(map(calc.meter2millmeter, api.read.wheel.ride_height()))
+            ride_height = api.read.wheel.ride_height()
 
             # Rake angle
             rake = round(calc.rake(*ride_height), 2)
