@@ -55,6 +55,7 @@ from .widget import (
     standings,
     steering,
     stint_history,
+    suspension_position,
     timing,
     track_map,
     trailing,
@@ -103,6 +104,7 @@ class WidgetControl:
         standings,
         steering,
         stint_history,
+        suspension_position,
         timing,
         track_map,
         trailing,
