@@ -12,6 +12,9 @@ WIP
   - Add "warning_color_liftforce" that shows color indicator
     when generating lift force.
 
+* [New]Suspension position Widget
+  - Show visualized suspension position (millimeter).
+
 * Timing Widget
   - Add "show_session_personal_best" option (disabled by default),
     which shows personal best lap time from current session.
